--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "homepage" : "http://Swarup2608.github.io/react_calci"
+    "homepage" : "http://swarup2608.github.io/react_calci"
   },
   "scripts": {
     "start": "react-scripts start",
